--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,8 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$code-block-background-dark: #4d495a;
+
 // Width of the content area
 $content-width:    750px;
 $content-width-small: 90%;
